# hls-project

./: .gitignore  CMakeLists.txt  README.md
data/: model_weights.npy
data/3x3/: conv1_biases.txt  conv2_biases.txt  conv2_weights.txt  conv3_biases.txt  conv3_weights.txt  local3_biases.txt  local3_weights.txt  outFile.txt
data/5x5/: conv1_biases.txt  conv1_weights.txt  conv2_biases.txt  conv2_weights.txt  conv3_biases.txt  conv3_weights.txt  local3_biases.txt  local3_weights.txt
src/cpp/: CMakeLists.txt  ac_int.h  conv2d.cpp  conv2d.hpp  load.cpp  load.hpp  main.cpp  main.h  test.cpp  types.hpp
src/cpp/lib/: CMakeLists.txt  ac_fixed.h
src/cpp/simpleFlow/: CMakeLists.txt  CONFIG.hpp  CONV2D.cpp  CONV2D.hpp  CONV2D_TESTBENCH.cpp  DENSE.cpp  DENSE.hpp  POOL2D.cpp  POOL2D.hpp  TOP.cpp  TOP.hpp  TOP_TESTBENCH.cpp  conv2d.cpp  conv2d.hpp  layer.h  load.cpp  load.hpp
src/python/: Conv2D.py  Makefile  MaxPooling2D.py  inference.py  lecture.py  load_coeff.py  main.py  model.py  model_5x5.py  my_model.py  normalize.py  read_dataset.py  read_dataset_updated.py  requirements.txt  test.py  write_image.py  write_weigths.py
src/python/simpleFlow/: Conv2D.py  Dense.py  Layer.py  MaxPooling2D.py  Reshape.py  Sequential.py  __init__.py
src/scripts/: write_bin.sh
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  conv2d_test.cpp  inference_test.cpp  top_test.cpp
